force-app/main/default/objects/Prescription__c/fields/Medicine_Code__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Code__c</fullName>
    <label>Medicine Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>