force-app/main/default/objects/Prescription__c/fields/Prescription_Expire__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Expire__c</fullName>
    <defaultValue>TODAY() + 30</defaultValue>
    <label>Prescription Expire</label>
    <required>true</required>
    <type>Date</type>
</CustomField>