force-app/main/default/objects/Prescription__c/fields/Prescription_ID__c.field-meta.xml
<CustomField>
    <fullName>Prescription_ID__c</fullName>
    <label>Prescription ID</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>