force-app/main/default/objects/Prescription__c/fields/Prescription_Item__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescription Item</label>
    <referenceTo>Prescription_Item__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>