force-app/main/default/objects/Prescription__c/fields/Prescription_Time__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Time__c</fullName>
    <label>Prescription Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>